# hugin

./: CMakeLists.txt  Changes.txt  INSTALL_cmake
.github/workflows/: build.yml
CMakeModules/: FindEXIV2.cmake  FindJPEG.cmake  FindLibraryWithDebug.cmake  FindOpenEXR.cmake  FindVIGRA.cmake  PackageMacAppBundleLibs.sh.in  win_bundle.cmake
doc/: assistant_file_format.txt  executor_file_format.txt  fulla.1
mac/: CopyTranslations.sh  DmgScript.scpt  configure-bundle.sh  nona_gui-Info.plist
mac/ExternalPrograms/patches/: wxmac-datatransfer.patch  wxmac-execute.patch
mac/ExternalPrograms/scripts/: SetEnv.sh  boost.sh  build-all.sh  download-all.sh  enblend.sh  gsl.sh  libexiv2.sh  libffi.sh  libglew.sh  libglib2.sh  libjpeg.sh  libomp.sh  openexr.sh  vigra.sh  wxmac.sh
mac/Hugin.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  hugin_config.h.in.cmake
src/celeste/: Utilities.cpp
src/deghosting/: algtinyvector.h  deghosting.cpp  deghosting.h  deghosting_mask.cpp  histogram.h  imageloop.h  khan.h  multiresolution_scaling.h  support.h
src/foreign/: CMakeLists.txt
src/hugin1/base_wx/: AssistantExecutor.cpp  AssistantExecutor.h  CMakeLists.txt  CommandHistory.cpp  Executor.cpp  Executor.h  LensTools.cpp  MyExternalCmdExecDialog.cpp  PanoCommand.h  RunStitchPanel.cpp  StitchingExecutor.cpp  platform.cpp  platform.h  wxPanoCommand.cpp
src/hugin1/calibrate_lens/: CMakeLists.txt  LensCalApp.cpp  LensCalFrame.cpp
src/hugin1/executor/: hugin_executor.cpp  normal_enblend.executor  normal_enblend_cubic.executor  normal_layered_tiff.executor
src/hugin1/hugin/: AboutDialog.cpp  AssistantPanel.cpp  AssistantPanel.h  AutoCtrlPointCreator.cpp  CMakeLists.txt  CPDetectorDialog.cpp  CPEditorPanel.cpp  CPEditorPanel.h  CPImageCtrl.cpp  CPImageCtrl.h  CPImagesComboBox.cpp  CPListFrame.cpp  CPSharedStructs.h  ChangeImageVariableDialog.cpp  DragTool.cpp  GLPreviewFrame.cpp  GLPreviewFrame.h  GLRenderer.cpp  GLViewer.cpp  GLViewer.h  GreatCircles.cpp  HTMLWindow.cpp  ImageVariableDialog.cpp  ImagesList.cpp  ImagesPanel.cpp  ImagesTree.cpp  ImagesTree.h  LocalizedFileTipProvider.cpp  MainFrame.cpp  MainFrame.h  MaskEdEditWnd.cpp  MaskEdEditWnd.h  MaskEditorPanel.cpp  MaskImageCtrl.cpp  MaskImageCtrl.h  OptimizePanel.cpp  OptimizePanel.h  OptimizePhotometricPanel.cpp  OptimizePhotometricPanel.h  OverviewOutlinesTool.cpp  (+28 more)
src/hugin1/hugin/xrc/data/: CMakeLists.txt  expressions.ini  intro.htm  tips.txt
src/hugin1/hugin/xrc/data/help_en_EN/: 16bit.html  16bit_workflow_with_hugin.html  Aliasing.html  Align_a_stack_of_photos.html  Align_image_stack.html  Alpha_channel.html  Aspect_Ratio.html  Autooptimiser.html  Autopano-sift-C.html  Autopano-sift.html  Autopano.html  Banding.html  Barrel_distortion.html  Bracketing.html  CCD.html  Calibrate_lens_gui.html  Camera_response_curve.html  Celeste_standalone.html  Checkpto.html  Chromatic_aberration.html  Color_correct_tiff.html  Colour_profile.html  Contrast.html  Control_Point_Detector_Parameters.html  Control_point_generators.html  Control_points.html  Cpclean.html  Cpfind.html  Crop_factor.html  Cropped_TIFF.html  Cubic.html  Cubic_Projection.html  Cylindrical.html  Cylindrical_Projection.html  Cylindrical_panorama.html  DSLR_spherical_resolution.html  Depth_of_Field.html  Diffraction.html  Dust_Removal_with_Flatfield.html  Dynamic_range.html  (+134 more)
src/hugin1/icpfind/: AutoCtrlPointCreator.cpp  CPDetectorConfig.cpp  icpfind.cpp
src/hugin1/ptbatcher/: Batch.cpp  BatchFrame.cpp  BatchFrame.h  CMakeLists.txt  FindPanoDialog.cpp  PTBatcherGUI.cpp
src/hugin1/stitch_project/: CMakeLists.txt  hugin_stitch_project.cpp
src/hugin_base/: CMakeLists.txt  ControlPointEstimator.h  hugin_basic.h
src/hugin_base/algorithm/: PanoramaAlgorithm.h
src/hugin_base/hugin_math/: hugin_math.h
src/hugin_base/hugin_utils/: utils.h  (+2 more)
src/hugin_qtbase/: readme.txt
src/hugin_script_interface/: CMakeLists.txt
src/maskeditor/: CMakeLists.txt  maskeditor.sln  maskeditor.vcproj
src/maskeditor/core/: BrushStroke.h  CMakeLists.txt  IMaskEdMemento.cpp  IMaskEdMemento.h  ISegmentation.h  MaskEdCommand.cpp  MaskEdCommand.h  MaskFileMgr.cpp  MaskFileMgr.h  MaskMgr.cpp  MaskMgr.h  MaskPoly.h  PTOFileMgr.cpp  PTOFileMgr.h  Pixel.cpp  Pixel.h
src/maskeditor/doc/: maskeditor.zargo
src/maskeditor/gui/: BrushStroke.h  CMakeLists.txt  MaskEdApp.cpp  MaskEdApp.h  MaskEdClientWnd.cpp  MaskEdClientWnd.h  MaskEdEditWnd.cpp  MaskEdEditWnd.h  MaskEdMainFrame.cpp  MaskEdMainFrame.h  MaskEdPrefDlg.cpp  MaskEdPrefDlg.h  MaskEdPreviewWnd.cpp  MaskEdPreviewWnd.h  MaskEdThumbnailPreviewCtrl.cpp  MaskEdThumbnailPreviewCtrl.h  MaskEditingWnd.cpp  MaskEditingWnd.h
src/maskeditor/gui/xrc/: CMakeLists.txt  MaskEd_GUI.fbp  main_frame.xrc  main_menubar.xrc  main_toolbar.xrc  pref_dialog.xrc
src/maskeditor/gui/xrc/data/: CMakeLists.txt  Thumbs.db
src/maskeditor/segmentation/: CMakeLists.txt
src/maskeditor/segmentation/lazysnapping/: LazySnapping.cpp  LazySnapping.h  LazySnappingMemento.cpp  LazySnappingMemento.h  lazysnapping.cpp  lazysnapping.h  watershed.cxx
src/maskeditor/segmentation/lazysnapping/KMlocal/: KM_ANN.h
src/maskeditor/segmentation/lazysnapping/kmeans/: KMeans.hpp
src/maskeditor/segmentation/lazysnapping/maxflow/: graph.h
src/maskeditor/segmentation/polyed_basic/: PolyEdBasicMemento.cpp  PolyEdBasicMemento.h  PolyEd_Basic.cpp  PolyEd_Basic.h  polyed_basic.cpp  polyed_basic.h
src/tools/: CMakeLists.txt  ExtractPoints.h  align_image_stack.cpp  autooptimiser.cpp  checkpto.cpp  cpclean.cpp  fulla.cpp  geocpset.cpp  hugin_hdrmerge.cpp  hugin_lensdb.cpp  linefind.cpp  nona.cpp  pano_modify.cpp  pto_gen.cpp  pto_lensstack.cpp  pto_mask.cpp  pto_merge.cpp  pto_move.cpp  pto_template.cpp  pto_var.cpp  stacker.cpp  tca_correct.cpp  verdandi.cpp  vig_optimize.cpp
src/translations/: CMakeLists.txt  bg.po  ca_ES.po  ca_ES@valencia.po  cs_CZ.po  da.po  de.po  en_GB.po  es.po  eu.po  extract-messages.pl  extract-messages.sh  fi.po  fr.po  hu.po  hugin.pot  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  uk.po  xrc_pot.py  zh_CN.po  zh_TW.po
(+93 files in other folders)
